--- a/programs/alignment_protocol/Cargo.toml
+++ b/programs/alignment_protocol/Cargo.toml
@@ -13,8 +13,14 @@ default = []
 cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
+anchor-debug = []
+custom-heap = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+idl-build = [
+    "anchor-lang/idl-build",
+    "anchor-spl/idl-build"
+]
 
 [dependencies]
 anchor-lang = "0.30.1"
+anchor-spl = "0.30.1"
