--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 alignment_protocol = { path = "../programs/alignment_protocol", version = "0.1.0" }
 anchor-client = "0.30.1"
+anchor-lang = "0.30.1"
 anchor-spl = "0.30.1"
 anyhow = "1.0.96"
 clap = { version = "4.5.30", features = ["derive"] }
