--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alignment_protocol = { path = "../programs/alignment_protocol", version = "0.1.0" }
+alignment-protocol = { path = "../programs/alignment-protocol", version = "0.1.0" }
 anchor-client = "0.30.1"
 anchor-lang = "0.30.1"
 anchor-spl = "0.30.1"
