--- a/programs/alignment-protocol/Cargo.toml
+++ b/programs/alignment-protocol/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "alignment_protocol"
+name = "alignment-protocol"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
