Add debugging logs for vote counter in commit_vote function This adds logging to help diagnose the issue with totalCommittedVotes not incrementing. Additional diagnostic output of vote counter values both before and after incrementing.

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -11,7 +11,7 @@ alignment-protocol = "FtHfXYCwuVEb8LVkNwNMmqMVooyg2fxkoT8i9bkEcvKW"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
