--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+    "test": "anchor test"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
