--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,5 +11,6 @@ anchor-spl = "0.30.1"
 anyhow = "1.0.96"
 clap = { version = "4.5.30", features = ["derive"] }
 serde_json = "1.0.139"
+sha2 = "0.10.8"
 shellexpand = "3.1.0"
 tokio = "1.43.0"
