refactor: unify admin and user CLI into a single binary
  - Merge admin and user commands into a single CLI
  - Mark admin commands with clear [ADMIN] prefix in help text
  - Reorganize code into user/, admin/, and common/ directories
  - Update README and Cargo.toml for single binary architecture
  - Remove duplicate utility functions and redundant code

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -3,6 +3,10 @@ name = "alignment-protocol-cli"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "alignment-protocol-cli"
+path = "src/main.rs"
+
 [dependencies]
 alignment-protocol = { path = "../programs/alignment-protocol", version = "0.1.0" }
 anchor-client = "0.30.1"
