--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,11 +7,14 @@ skip-lint = false
 [programs.localnet]
 alignment-protocol = "FtHfXYCwuVEb8LVkNwNMmqMVooyg2fxkoT8i9bkEcvKW"
 
+[programs.devnet]
+alignment-protocol = "3NYwpp7xv6m35he2sbWTDKPyzepwQiJq5YkD2AzdHmRc"
+
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
