Switch cluster to localnet, update CLI defaults and PDA seeds, and add debug logging for mint initialization

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -14,7 +14,7 @@ alignment-protocol = "3NYwpp7xv6m35he2sbWTDKPyzepwQiJq5YkD2AzdHmRc"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
