--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "alignment-protocol",
   "license": "ISC",
   "scripts": {
-    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+    "trunk": "trunk",
+    "lint": "trunk check",
+    "fmt": "trunk fmt",
     "test": "anchor test"
   },
   "dependencies": {
@@ -11,6 +12,7 @@
     "@solana/spl-token": "^0.4.12"
   },
   "devDependencies": {
+    "@trunkio/launcher": "^1.3.4",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
