style: cleanup whitespace and formatting in Cargo.toml, contexts, votes, and error modules

--- a/programs/alignment-protocol/Cargo.toml
+++ b/programs/alignment-protocol/Cargo.toml
@@ -21,10 +21,7 @@ anchor-debug = []
 custom-heap = []
 no-log-ix-name = []
 custom-panic = []
-idl-build = [
-    "anchor-lang/idl-build",
-    "anchor-spl/idl-build"
-]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
 anchor-lang = "0.30.1"
