--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -15,16 +15,17 @@ runtimes:
     - go@1.21.0
     - node@18.20.5
     - python@3.10.8
+    - rust@1.84.0
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
     - checkov@3.2.396
-    - clippy@1.65.0
+    - clippy@1.84.0
     - git-diff-check
     - markdownlint@0.44.0
     - osv-scanner@2.0.0
     - prettier@3.5.3
-    - rustfmt@1.65.0
+    - rustfmt@1.84.0
     - shellcheck@0.10.0
     - shfmt@3.6.0
     - taplo@0.9.3
